# django_assessment

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  PROMPT_LOG.md  README.md  conftest.py  docker-compose.yml  entrypoint.sh  manage.py  postman_collection.json  pyproject.toml  start.sh
authentication/: __init__.py  admin.py  apps.py  exceptions.py  models.py  permissions.py  serializers.py  signals.py  urls.py  utils.py  views.py
authentication/tests/: test_login.py  test_signup.py  test_verification.py
events/: __init__.py  admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
events/tests/: test_enrollment.py  test_event_crud.py  test_permissions.py  test_search.py
events_platform/: __init__.py  asgi.py  celery.py  constants.py  exceptions.py  middleware.py  settings.py  urls.py  wsgi.py
