[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "events-platform"
version = "1.0.0"
description = "Django Events Platform with JWT authentication and RBAC"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Events Platform Team"}
]

dependencies = [
    "Django==5.2.14",
    "djangorestframework==3.17.1",
    "djangorestframework-simplejwt==5.5.1",
    "django-filter==25.2",
    "django-cors-headers==4.9.0",
    "psycopg2-binary==2.9.12",
    "celery==5.6.3",
    "redis==7.4.0",
    "django-celery-beat==2.9.0",
    "gunicorn==26.0.0",
    "python-dotenv==1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-django==4.12.0",
    "pytest-cov==7.1.0",
    "factory-boy==3.3.3",
    "black==26.5.1",
    "isort==8.0.1",
    "flake8==7.3.0",
    "pre-commit==4.6.0",
]

[tool.setuptools]
packages = ["authentication", "events", "events_platform"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_glob = ["*/migrations/*", "*/static/*"]
known_first_party = ["events_platform", "authentication", "events"]
known_django = ["django"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "events_platform.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--nomigrations --cov=. --cov-report=html --cov-report=term-missing --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
